--- a/src/styles/ManikantLanding.css
+++ b/src/styles/ManikantLanding.css
@@ -125,6 +125,8 @@
     -webkit-font-smoothing: antialiased;
     overflow-x: hidden;
     box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
 
 /* Remove background shapes */
